# kortex_hardware

./: CMakeLists.txt  package.xml
docs/: diagnosis_report.md  kortex_hardware.html
include/: Gen3Robot.h  LowPassFilter.h
src/: Gen3Robot.cpp  LowPassFilter.cpp  main.cpp
